log/build_2025-12-10_22-56-41/go2_teleop_ctrl_keyboard/stderr.log
  File "/home/xn/unitree_go2_ws/install/go2_teleop_ctrl_keyboard/lib/python3.8/site-packages/go2_teleop_ctrl_keyboard/go2_teleop_ctrl_keyboard.py", line 56
    def publish(self.apid_id):
                    ^
SyntaxError: invalid syntax

